--- a/#src/scss/country.scss
+++ b/#src/scss/country.scss
@@ -1538,10 +1538,11 @@ html.no-js li:hover > a + ul, html.no-js li:focus > a + ul {
         width: 50%;
         display: flex;
         flex-direction: column;
-        padding: 10% 0;
+        //padding: 10% 0;
     }
     &__left {
         width: 100%;
+        max-width: 38.2rem;
     }
     &__right {
         width: 100%;
@@ -1551,6 +1552,7 @@ html.no-js li:hover > a + ul, html.no-js li:focus > a + ul {
         font-weight: 700;
         color: $pryme-alt;
         position: relative;
+        margin-bottom: 1rem;
     }
     &__title::before {
 		content: "05";
@@ -1568,17 +1570,23 @@ html.no-js li:hover > a + ul, html.no-js li:focus > a + ul {
             display: none;
         }
 	}
-    &__sub-title {
+    &__sub-cap {
         font-size: 1.25rem;
+        font-weight: 700;
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+    }
+    &__sub-title {
+        font-size: 1rem;
         font-weight: 600;
-        margin: 3rem 0 1.6rem;
+        margin: 2rem 0 1.6rem;
         color: $pryme-alt;
     }
     &__list {
         margin-left: 1.125rem;
     }
     &__items {
-        list-style-type: disc; 
+        list-style-type: square; 
         margin-bottom: 0.5rem;
     }
     &__link {
@@ -1588,6 +1596,7 @@ html.no-js li:hover > a + ul, html.no-js li:focus > a + ul {
     }
     &__img {
         filter: drop-shadow(3px 3px 30px rgba(0, 0, 0, 0.3));
+        margin-top: 25%;
     }
 }
 
@@ -1764,6 +1773,7 @@ html.no-js li:hover > a + ul, html.no-js li:focus > a + ul {
         display: flex;
         justify-content: center;
         align-items: center;
+        transition: 0.3s;
     }
     &__up-arrow::before {
         width: 1.8rem;
@@ -1772,5 +1782,9 @@ html.no-js li:hover > a + ul, html.no-js li:focus > a + ul {
 		content: ' ';
 		background-image: url('../img/arrow-up.svg');
 		background-size: 1.8rem 2.5rem;
+    }
+    &__up-arrow:hover{
+       transform: scale(1.1);
+       transition: 0.3s;
     }
 }
