--- a/scss/style.scss
+++ b/scss/style.scss
@@ -985,7 +985,7 @@
 		font-family: 'Staatliches', cursive;
 		opacity: 0.1;
 		color: transparent;
-    	-webkit-text-stroke: 3px $pryme-color;
+    	-webkit-text-stroke: 3px $pryme-alt;
 	}
 	&__text {
 		max-width: 31.25rem;
