--- a/scss/country.scss
+++ b/scss/country.scss
@@ -130,6 +130,29 @@
 	.core-menu {
 		text-align:center;
 		overflow:hidden;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		&__select {
+			width: 12rem;
+			padding: 0.3rem 0.3rem 0.3rem 0.5rem;
+			color: $pryme-alt;
+			font-size: 0.75rem;
+			cursor: pointer;
+		}
+		&__calc-btn {
+			background: linear-gradient(180deg, #EB0202 0%, #9F0202 100%);
+			color: $colorw;
+			font-weight: 700;
+			padding: 0.6rem 1.5rem;
+		}
+		&__calc-btn:hover {
+			filter: drop-shadow(0px 0px 10px #EC3737);
+		}
+		&__calc-btn:active {
+			box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 0.6);
+			transition: 0.2s;
+		}
 	}
 	.core-menu li {
 		list-style:none;
@@ -146,9 +169,9 @@
 		filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.5));
 		color: $colorw;
 	}
-	li span.toggle {
-		padding-left:1em;
-	}
+	// li span.toggle {
+	// 	padding-left:1em;
+	// }
 	.dropdown {
 		position:absolute;
 		width:220px;
