last changes germany

--- a/#src/css/country.css
+++ b/#src/css/country.css
@@ -2942,7 +2942,7 @@ p {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  width: 75%;
+  width: 100%;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
@@ -2975,6 +2975,84 @@ p {
 .service__img {
   -webkit-filter: drop-shadow(3px 3px 30px rgba(0, 0, 0, 0.3));
           filter: drop-shadow(3px 3px 30px rgba(0, 0, 0, 0.3));
+}
+
+.service .vertical-tabs:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: -1px;
+  z-index: 1;
+}
+
+.service .vertical-tabs:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.service .vertical-tabs {
+  position: relative;
+  margin-left: 12rem;
+  margin-top: 6rem;
+}
+
+.service .tabs {
+  position: relative;
+  float: left;
+  width: 12rem;
+  padding-left: 0;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: -12rem;
+}
+
+.service .tabs li {
+  position: relative;
+  list-style: none;
+}
+
+.service .tabs li:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.service .tabs li a {
+  position: relative;
+  display: block;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 1.375rem;
+  text-decoration: none;
+  text-align: center;
+  background: #fff;
+  color: #095F71;
+  border: 1px solid #095F71;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.service .tabs li:hover a {
+  background: -webkit-gradient(linear, left top, left bottom, from(#F96B30), to(#D51B1B));
+  background: linear-gradient(180deg, #F96B30 0%, #D51B1B 100%);
+  color: #F0F8F7;
+  border: 1px solid #F96B30;
+}
+
+.service .tabs li.active a {
+  z-index: 2;
+}
+
+.service .tabs-content .content {
+  display: none;
+  margin-left: 5rem;
+}
+
+.service .tabs-content .content.active {
+  display: block;
 }
 
 .footer {
